--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -114,6 +115,7 @@
                                             <outlet property="ratingImageView" destination="wBh-Nh-uQg" id="shV-Eq-hK1"/>
                                             <outlet property="reviewsLabel" destination="6FF-7V-Su8" id="CyY-Fs-gwM"/>
                                             <outlet property="thumbImageView" destination="Edc-82-ckk" id="uPJ-Fo-J9g"/>
+                                            <segue destination="Ehd-Dp-BXR" kind="show" identifier="mainToDetails" id="FKv-bF-XJ4"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -131,7 +133,7 @@
                         <barButtonItem key="leftBarButtonItem" title="Filters" id="OpR-ye-pN7">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
-                                <segue destination="rzF-vC-LRz" kind="presentation" id="sSG-te-apz"/>
+                                <segue destination="rzF-vC-LRz" kind="presentation" identifier="mainToFiltersNav" id="sSG-te-apz"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -166,7 +168,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="149"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" onImage="B11E3A75-6B32-49BC-B900-F2E9012010D0" offImage="B11E3A75-6B32-49BC-B900-F2E9012010D0" translatesAutoresizingMaskIntoConstraints="NO" id="SSu-Ae-oGP">
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" onImage="C1CE8869-FA9F-4A7E-9CF0-CCC30023A482" offImage="C1CE8869-FA9F-4A7E-9CF0-CCC30023A482" translatesAutoresizingMaskIntoConstraints="NO" id="SSu-Ae-oGP">
                                                     <rect key="frame" x="256" y="59" width="51" height="31"/>
                                                     <color key="onTintColor" red="0.93059724569320679" green="0.27452105283737183" blue="0.18561512231826782" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </switch>
@@ -222,6 +224,61 @@
             </objects>
             <point key="canvasLocation" x="4869.375" y="365.49295774647885"/>
         </scene>
+        <!--Details View Controller-->
+        <scene sceneID="c39-rm-hfj">
+            <objects>
+                <viewController id="Ehd-Dp-BXR" customClass="DetailsViewController" customModule="Yelp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G1D-a6-n8D"/>
+                        <viewControllerLayoutGuide type="bottom" id="byV-AL-11O"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="24H-8o-Eg7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M4U-to-Y8L">
+                                <rect key="frame" x="9" y="72" width="295" height="476"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Business Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tjV-gn-lay">
+                                        <rect key="frame" x="88" y="64" width="118" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mHU-z2-Uu5">
+                                        <rect key="frame" x="27" y="104" width="240" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9p9-x7-5tf">
+                                        <rect key="frame" x="116" y="275" width="63" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="M4U-to-Y8L" firstAttribute="top" secondItem="G1D-a6-n8D" secondAttribute="bottom" constant="8" id="96N-GY-x43"/>
+                            <constraint firstItem="M4U-to-Y8L" firstAttribute="leading" secondItem="24H-8o-Eg7" secondAttribute="leadingMargin" constant="-7" id="Dfl-OY-Hgn"/>
+                            <constraint firstAttribute="bottom" secondItem="M4U-to-Y8L" secondAttribute="bottom" constant="20" symbolic="YES" id="edj-XJ-0y7"/>
+                            <constraint firstItem="M4U-to-Y8L" firstAttribute="trailing" secondItem="24H-8o-Eg7" secondAttribute="trailingMargin" id="odR-CO-QKw"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="addressLabel" destination="9p9-x7-5tf" id="pIn-hr-LOO"/>
+                        <outlet property="businessImageView" destination="mHU-z2-Uu5" id="mgl-sx-teL"/>
+                        <outlet property="nameLabel" destination="tjV-gn-lay" id="EdG-Ai-v1w"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WTg-ve-yqL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3935.625" y="1069.0140845070423"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="oDd-UJ-QKb">
             <objects>
@@ -272,7 +329,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="B11E3A75-6B32-49BC-B900-F2E9012010D0" width="64" height="64">
+        <image name="C1CE8869-FA9F-4A7E-9CF0-CCC30023A482" width="64" height="64">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
